--- a/app/views/list/_add_list.html.erb
+++ b/app/views/list/_add_list.html.erb
@@ -1,4 +1,4 @@
-<% form_for(:list, :url => list_details_url(:action => 'create', :return_to => request.request_uri) ) do |f| %>
+<% form_for(:list, :url => list_details_url(:action => 'create', :return_to => request.url) ) do |f| %>
 	<%= f.text_field :name, :size => '30' %>
 	<%= submit_tag 'Create' %>
 	<script>Behaviour.register(add_list_rules);</script>
