--- a/app/views/shared/_help.html.erb
+++ b/app/views/shared/_help.html.erb
@@ -1,8 +1,8 @@
 <h2>Information on</h2>
-<%= link_to 'Subscribing to talks'+arrow,
+<%= link_to ('Subscribing to talks'+arrow).html_safe,
 document_url(:name => 'Help with icalendar')%>
 <%= document 'Finding a talk', true %>
 <%= document 'Adding a talk', true %>
-<%= link_to 'Disseminating talks'+arrow,
+<%= link_to ('Disseminating talks'+arrow).html_safe,
 document_url(:name => 'Syndicating talks') %>
-<%= link_to 'Help and Documentation'+arrow, document_url(:name => 'documentation') %>
+<%= link_to ('Help and Documentation'+arrow).html_safe, document_url(:name => 'documentation') %>
