fixed @controller -> controller in view.
Note: I don't understand how rails choose which body_class helper
method to use. For example, for GET "/", rails used controller
 SearchController#index
and used helpers in the order of priority:
 TalkHelper -> ShowHelper -> SearchHelper.

--- a/app/views/index/_selector.html.erb
+++ b/app/views/index/_selector.html.erb
@@ -1,6 +1,6 @@
 <ul class='indexselector'>
 	<% ['Lists','Venues','Talks','Users','Dates'].each do |category| %>
-		<% if category.downcase == @controller.action_name %>
+		<% if category.downcase == controller.action_name %>
 			<li class='selected'><%= category %>
 		<% else %>
 			<% if category == 'Dates' %>
