--- a/app/views/login/other_users.html.erb
+++ b/app/views/login/other_users.html.erb
@@ -4,13 +4,13 @@
 	<p class='error'><%= flash[:login_error] %></p>
 <% end %>
 
-<%= start_form_tag :action => 'not_raven_login' %>
+<%= form_tag(:action => 'not_raven_login') do %>
 <table>
 	<tr><td>Your e-mail:</td><td><%= text_field_tag 'email', @email %></td></tr>
 	<tr><td>Your password:</td><td><%= password_field_tag 'password'%></td></tr>
 </table>
 <%= submit_tag 'Log in' %>
-<%= end_form_tag %>
+<% end %>
 
 <p><%= link_to 'E-mail me my password', :action => 'lost_password'%></p>
 
