--- a/app/views/login/new_user.html.erb
+++ b/app/views/login/new_user.html.erb
@@ -1,6 +1,6 @@
 <h1>Welcome to talks.cam</h1>
 
-<% form_tag :action => 'do_new_user' do %>
+<%= form_tag :action => 'do_new_user' do %>
 
 <p>I believe this is the first time you have logged into talks.cam.</p>
 
