--- a/app/views/list/new.html.erb
+++ b/app/views/list/new.html.erb
@@ -4,7 +4,7 @@
 <p class="createwarn">Please add an existing series to talks.cam <b><i>only</i></b> if you are the <b><i>actual organiser</i></b> of the series, or have first <i>asked their permission</i>. Talks.cam will show <i>you</i> as the contact person for this list, given as a link to <%= link_to 'your talks.cam profile', user_url(:id => User.current.id) %>.</p>
 </div>
 
-<% form_tag( {:action => 'create'}, :multipart => true, :id => 'editlist') do %>
+<%= form_tag( {:action => 'create'}, :multipart => true, :id => 'editlist') do %>
 <%= render :partial => 'list_details' %>
 <% end %>
 
