--- a/app/views/talk/edit.html.erb
+++ b/app/views/talk/edit.html.erb
@@ -82,9 +82,9 @@ var talk_edit_rules = {
 
 Behaviour.register(talk_edit_rules);
 </script>
-<script src="/javascripts/jquery-1.7.2.min.js" type="text/javascript"></script>
-<script src="/javascripts/jquery.leanModal.min.js" type="text/javascript"></script>
-<script src="/javascripts/smartform.js" type="text/javascript"></script>
+<%= javascript_include_tag "jquery-1.7.2.min.js" %>
+<%= javascript_include_tag "jquery.leanModal.min.js" %>
+<%= javascript_include_tag "smartform.js" %>
 <script>
    jQuery.noConflict();
    (function ($) {
