--- a/app/views/shared/_headerlogos.html.erb
+++ b/app/views/shared/_headerlogos.html.erb
@@ -1,8 +1,8 @@
 <table id="header" summary="page header">
 <tr>
-<td class="identifier"><%= link_to image_tag('identifier2.gif', :width => "192", :height =>"46", :alt => "[University of Cambridge]"), "http://www.cam.ac.uk/"  %></td>
+<td class="identifier"><%= link_to image_tag(SITE_LOGO,:height =>"64", :alt => SITE_NAME), home_url  %></td>
 <td class='flash'><%= show_flash %></td>
-<td class="deptitle"><%= link_to image_tag('talkslogosmall.gif', :alt => '[Talks.cam]'), home_url %></td>
+<td class="deptitle"><%= link_to image_tag(HOST_INSTITUTE_LOGO, :alt => HOST_INSTITUTE), HOST_INSTITUTE_URL %></td>
 </tr>
 </table>
 <div id="topbgline" class='line'>&nbsp;</div>
