Fixed breadcrumbs by adding 'my' in front.

--- a/app/views/shared/_breadcrumbs.html.erb
+++ b/app/views/shared/_breadcrumbs.html.erb
@@ -1,6 +1,6 @@
 <!-- breadcrumbs -->
 
 <div id="bread">
-<p><!--<a href="http://www.cam.ac.uk/">University of Cambridge</a>&nbsp;&gt;&nbsp;--><%= link_to 'Talks.cam', home_url %><%= breadcrumbs %></p>
+<p><!--<a href="http://www.cam.ac.uk/">University of Cambridge</a>&nbsp;&gt;&nbsp;--><%= link_to SITE_NAME, home_url %><%= mybreadcrumbs.html_safe %></p>
 </div>
 <!-- end breadcrumbs -->
