--- a/app/views/talk/index.html.erb
+++ b/app/views/talk/index.html.erb
@@ -1,14 +1,11 @@
 <div class='vevent'>
 	<%= logo(@talk, :medium) %>
 	<h1 class='summary'><%= @talk.title %></h1>
-		
+	<%= link_to_if @talk.speaker, @talk.name_of_speaker, { :controller => "user", :action => "show", :id => @talk.speaker  } %>		
 	<ul class='details'>
-		<li><%= image_tag 'user.jpg' %><%= link_to_if @talk.speaker, @talk.name_of_speaker, { :controller => "user", :action => "show", :id => @talk.speaker  } %></li>
 		<li><%= image_tag 'clock.jpg' %><%= format_time_of_talk @talk %></li>
 		<li><%= image_tag 'house.jpg' %><%= link_list @talk.venue %>.</li>
 	</ul>
-
-		<p>If you have a question about this talk, please contact <%= link_user @talk.organiser %>.</p>
 		
 		<% if @talk.special_message %>
 			<p class='urgent'><%= @talk.special_message %></p>
