--- a/app/views/shared/_login.html.erb
+++ b/app/views/shared/_login.html.erb
@@ -1,4 +1,3 @@
 <h2>Log in</h2>
-<%= link_to ('Cambridge users (raven)'+arrow).html_safe, login_url(:action => 'go_to_raven', :return_url => request.url), :class => 'click'  %>
-<%= link_to ('Other users'+arrow).html_safe, login_url(:action => 'other_users', :return_url => request.url ) %>
+<%= link_to ('Other users'+arrow).html_safe, login_url(:action => 'other_users', :return_url => controller.action_name != "logout" ? request.url : home_url) %>
 <%= link_to ('No account?'+arrow).html_safe, new_user_url %>
