Included copyright to Talks.Tokyo.

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,6 +1,6 @@
 <!-- footer -->
 <div id="bottombgline" class='line'>&nbsp;</div>
-<p class="cfooter">&copy; 2006-2009 Talks.cam, University of Cambridge. <%=
+<p class="cfooter">&copy; 2006-2009 Talks.cam, University of Cambridge. &copy; 2012- Talks.Tokyo <%=
 link_to 'Contact Us', document_url(:name => 'Contact') %>
  | <%= link_to 'Help and Documentation', document_url(:name => 'Documentation') %>
  | <%= document 'Privacy and Publicity' %>
