Renamed 'other_users' -> 'login'

--- a/app/views/login/login.html.erb
+++ b/app/views/login/login.html.erb
@@ -1,5 +1,5 @@
-<h1>Login for non-university users</h1>	
-<p>Please login using this form.</p>
+<h1>Log in</h1>	
+<p>Please log in using this form.</p>
 <% if flash[:login_error] %>
 	<p class='error'><%= flash[:login_error] %></p>
 <% end %>
