Renamed not_raven_login -> do_login.

--- a/app/views/login/login.html.erb
+++ b/app/views/login/login.html.erb
@@ -4,7 +4,7 @@
 	<p class='error'><%= flash[:login_error] %></p>
 <% end %>
 
-<%= form_tag(:action => 'not_raven_login') do %>
+<%= form_tag(:action => 'do_login') do %>
 <table>
 	<tr><td>Your e-mail:</td><td><%= text_field_tag 'email', @email %></td></tr>
 	<tr><td>Your password:</td><td><%= password_field_tag 'password'%></td></tr>
