--- a/app/views/layouts/front.html.erb
+++ b/app/views/layouts/front.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en">
 <%= render 'shared/header' %>
-<body class="<%= body_class %>">
+<body class="front">
 <%= render 'shared/navigationbar' %>
 
 <div id="content"><a name="startcontent" id="startcontent"></a><!-- this is the anchor for the skiplink -->
