Replaced check_box_tag with check_box. (Hidden field should come before the check-box).

--- a/app/views/list_talk/create.html.erb
+++ b/app/views/list_talk/create.html.erb
@@ -6,8 +6,7 @@
 	<% for list in @lists.sort_by { |list| list.name } %>
 	<tr>
 		<td>
-			<%= check_box_tag "add_to_list[#{list.id}]", 'add', list.talks.direct.include?(@child) %>
-			<%= hidden_field_tag "add_to_list[#{list.id}]", 'remove' %>
+			<%= check_box "add_to_list", list.id, { :checked => list.talks.direct.include?(@child) }, 'add', 'remove' %>
 		</td>
 	<td><%= list.name %></td></tr>
 	<% end %>
