--- a/app/views/shared/_login.html.erb
+++ b/app/views/shared/_login.html.erb
@@ -1,3 +1,3 @@
 <h2>Log in</h2>
-<%= link_to ('Log in'+arrow).html_safe, login_url(:action => 'login', :return_url => (controller.action_name == "login" || controller.action_name == "logout") ? home_url : request.url) %>
+<%= link_to ('Log in'+arrow).html_safe, login_url(:return_url => (controller.action_name == "index" || controller.action_name == "logout") ? home_url : request.url) %>
 <%= link_to ('No account?'+arrow).html_safe, new_user_url %>
