--- a/app/views/show/text.html.erb
+++ b/app/views/show/text.html.erb
@@ -5,10 +5,10 @@ Error: <%= error %>
 <%= @list.name %>
 <%= @list.details %>
 <%= @talks.empty? ? '(No talks)' : ''%>
-<% @talks.group_by(&:date).sort_by { |date,talks| date }.each do |date,talks| %>
+<% @talks.group_by(&:date).each do |date,talks| %>
 <%= date.to_time.strftime '%A %d %B %Y' %>
 
-<% talks.each do |talk| %>
+<% talks.sort_by { |talk| talk.start_time }.each do |talk| %>
 <%= talk.title.upcase %>
 <%= talk.name_of_speaker %><% if talk.special_message && !talk.special_message.empty? %><%= "\n#{talk.special_message}" %><% end %>
 <%= talk.series.name %>
