--- a/app/views/list/index.html.erb
+++ b/app/views/list/index.html.erb
@@ -22,10 +22,10 @@
 			<h2>Other views and ways to subscribe</h2>
 			<ul>
 				<li><%= link_to 'Create Custom View', :controller => 'custom_view', :action => 'index', :list => @list %></li>
-				<li><%= link_to 'Subscribe using ical/vcal', :controller => 'show', :action => 'ics', :id => @list, :only_path => false, :protocol => 'webcal://'   %> (<%= document 'Help with icalendar' %>)</li>
-			        <li><%= link_to 'Subscribe to RSS feed', list_url(:id => @list, :action => 'rss' )%><br/> - <i>please read <%= link_to "notes", document_url(:name => 'RSS feeds') %> first</i></li>
+				<li><%= link_to 'Subscribe using ical/vcal', :controller => 'show', :action => 'index', :id => @list, :only_path => false, :format => :ics, :protocol => 'webcal://'   %> (<%= document 'Help with icalendar' %>)</li>
+			        <li><%= link_to 'Subscribe to RSS feed', list_url(:id => @list, :action => 'index', :format => :rss)%><br/> - <i>please read <%= link_to "notes", document_url(:name => 'RSS feeds') %> first</i></li>
 				<li>Manage e-mail reminders<br/> - <i>see link at top of page</i></li>
-				<li><%= link_to 'Plain Text View', list_url(:id => @list, :action => 'text') %></li>
+				<li><%= link_to 'Plain Text View', list_url(:id => @list, :action => 'index', :format => :txt) %></li>
 			</ul>
 			<p>You can include this list in your own website. Read the <%= document 'syndicating talks', false, 'Instructions on how to include a list in your site' %> and then click on 'Create Custom View' above to get started.</p>
 		</td>
