Use getElementById().innerHTML instead of document.write. The name of the div to be used can be specified by params[:divid].

--- a/app/views/custom_view/embed_example.html.erb
+++ b/app/views/custom_view/embed_example.html.erb
@@ -13,6 +13,7 @@
 		
 		<h2>Talks taken from talks.cam</h2>
 		<!-- This next line gets the content from talks.cam -->
+		<div id="talks"></div>
 		<script language="javascript" src="<%= @url %>"></script>
 		<!-- That's all folks! -->
 		<p>You can add more information below the talk list.</p>
