--- a/app/views/layouts/embed.html.erb
+++ b/app/views/layouts/embed.html.erb
@@ -1,1 +1,1 @@
-document.write("<%= @content_for_layout.gsub('"','\"').gsub("\n",'').gsub("\r","") %><p class='talks'>Powered by <a href='http://talks.cam.ac.uk'>Talks.cam</a></p>");
+document.getElementById('<%= @div_embed %>').innerHTML="<%= yield.gsub('"','\"').gsub("\n",'').gsub("\r","").html_safe %><p class='talks'>Powered by <a href='http://talks.cam.ac.uk'>Talks.cam</a></p>";
