Default is ex_directory=false. Call it privacy.

--- a/app/views/talk/edit.html.erb
+++ b/app/views/talk/edit.html.erb
@@ -37,7 +37,7 @@
 	<h3>Time HH:MM</h3>
 	<%= f.text_field :start_time_string, :size => '5' %> to <%= f.text_field :end_time_string, :size => '5' %> 
 	
-	<h3>Publicity</h3>
+	<h3>Privacy</h3>
 	<p class='emailcheck'><%= f.check_box :ex_directory %> If checked,
 this talk will not appear in the index or search results, but will still be
 found by Google and similar sites.
