Shows language in show/index. Added a field for language in talk/edit.

--- a/app/views/show/_simple_talk.html.erb
+++ b/app/views/show/_simple_talk.html.erb
@@ -9,6 +9,9 @@
 <h2 class='summary'><%= link_talk simple_talk %></h2>
 	<p class='details'><%= simple_talk.name_of_speaker %>.</p> 
 	<p class='abstract'><%= truncate(simple_talk.abstract, :length => (simple_talk.language=='ja' ? 200 : 400)) %> <%= link_to('[more]', talk_url(:id => simple_talk), :class => 'click link') %></p>
-	<p><%= image_tag 'house.jpg' %><%= link_list simple_talk.venue %>.</p>
+	<p><%= image_tag 'house.jpg' %><%= link_list simple_talk.venue %>.
+	<% if simple_talk.language %>
+	Language: <%= simple_talk.language_name %>
+	<% end %></p>
 	<!--<p class='location'><%= image_tag 'house.jpg' %><%= link_list simple_talk.venue %>.</p>-->
 </div>
