--- a/app/views/talk/edit.html.erb
+++ b/app/views/talk/edit.html.erb
@@ -43,6 +43,9 @@ this talk will not appear in the index or search results, but will still be
 found by Google and similar sites.
 (<%= link_to 'Tell me more', document_url(:name => 'Privacy and Publicity') %>)</p>
 
+	<h3>Language</h3>
+	<%= f.text_field :language_name, {:size => 60, :class => 'wide'} %>
+
 	<p><%= submit_tag 'Save'%> or <%= link_to 'Cancel', @talk.id ? talk_url(:id => @talk.id) : list_url(:id => @talk.series.id ) %></p>
 	
 	<% end %>
