--- a/app/views/layouts/embedcss.html.erb
+++ b/app/views/layouts/embedcss.html.erb
@@ -1,1 +1,1 @@
-document.write("<%= stylesheet_link_tag('embedcss').gsub('"','\"').gsub("\n",'').gsub("\r",'') %><%= @content_for_layout.gsub('"','\"').gsub("\n",'') %><p class='talks'>Powered by <a href='http://talks.cam.ac.uk'>Talks.cam</a></p>");
+document.getElementById('<%= @div_embed %>').innerHTML="<%= stylesheet_link_tag('embedcss').gsub('"','\"').gsub("\n",'').gsub("\r",'').html_safe %><%= yield.gsub('"','\"').gsub("\n",'').html_safe %><p class='talks'>Powered by <a href='<%= home_url %>'><%= SITE_NAME %></a></p>";
