--- a/app/views/mailer/list_tickle.text.erb
+++ b/app/views/mailer/list_tickle.text.erb
@@ -13,9 +13,9 @@ Or, if you have a talks.cam account, you can add this list to your list:
 <%= @add_to_list_url %>
 
 If you don't have a talks.cam account, you can get one here:
-http://talks.cam.ac.uk/user/new
+<%= new_user_url %>
 
 If the technology works, clicking on the link below might cause your calendar program to subscribe to this list of talks:
 <%= @list_webcal_url %>
 
-If you think that this e-mail was sent inappropriately, please forward it to webmaster@talks.cam.ac.uk. We will use this code: <%= @tickle.id %> to figure out who sent it, and to take appropriate action.
+If you think that this e-mail was sent inappropriately, please forward it to <%= WEBMASTER %>. We will use this code: <%= @tickle.id %> to figure out who sent it, and to take appropriate action.
