--- a/app/views/talk/_help_talk_name_of_speaker.html.erb
+++ b/app/views/talk/_help_talk_name_of_speaker.html.erb
@@ -2,7 +2,7 @@
 
 <p>Please write the name and affiliation of the speaker as you would like it to appear.	If you do not know it at this stage, please leave it as "<%= update_field 'talk_name_of_speaker','Speaker to be confirmed' %>". As you start typing I will make some suggestions below. Click on a suggestion to enter their details.</p>
 
-<%= observe_field 'talk_name_of_speaker',  :frequency => 1, :update => 'speakers', :url => { :action=> 'speaker_name_list' }, :with => "'search=' + escape(value)" %>
+<%= observe_field 'talk_name_of_speaker',  :frequency => 1, :update => 'speakers', :url => { :action=> 'speaker_name_list' }, :with => "'search=' + encodeURIComponent(value)" %>
 
 <ul>
 <div id='speakers'>
