--- a/app/views/list/edit.html.erb
+++ b/app/views/list/edit.html.erb
@@ -3,7 +3,9 @@
 <ul>
 	<li><%= link_to 'Edit the name, description or picture of this list', list_details_url(:action => 'edit_details', :id => @list.id )%></li>
 	<li><%= link_to 'Add or remove a manager of this list', list_user_url(:action => 'edit', :list_id => @list.id )%></li>
+	<li><%= link_to 'Generate a link for non-organizers to request for adding a talk in this list.', list_details_url(:action => 'generate_talk_post_url', :id => @list.id,  :format => 'js'), :remote => true %><div id="talk_post_url"></div></li>
 </ul>
+
 <ul>
 	<li><%= link_to 'Remove a list that has been included in this one', include_list_url(:action => 'edit', :list_id => @list.id )%></li>
 	<li><%= link_to 'Remove a talk that has been included in this one', include_talk_url(:action => 'edit', :list_id => @list.id )%></li>
