Added effect2 in _simple_talk.html.erb (following the last commit) The CSS code was kindly provided by Paulund http://www.paulund.co.uk/creating-different-css3-box-shadows-effects

--- a/app/views/show/_simple_talk.html.erb
+++ b/app/views/show/_simple_talk.html.erb
@@ -1,4 +1,4 @@
-<div class='vevent simpletalk click'>
+<div class='vevent simpletalk click effect2'>
 	<% if simple_talk.special_message %>
 		<p class='urgent'><%= simple_talk.special_message %></p>
 	<% end %>
