--- a/app/views/talk/_timing.html.erb
+++ b/app/views/talk/_timing.html.erb
@@ -1,1 +1,4 @@
-<li><%= link_to_function "#{timing.first} to #{timing.last}", "setTiming('#{timing.first}','#{timing.last}')" %></li>
+<% if timing %>
+<li><%= link_to_function "#{timing.first} to #{timing.last}", "setTiming('#{timing.first}','#{timing.last}','#{@prefix}')" %></li>
+<% end %>
+
