--- a/app/views/posted_talks/show.html.erb
+++ b/app/views/posted_talks/show.html.erb
@@ -1,55 +1,15 @@
 <p id="notice"><%= notice %></p>
-
-<p>
-  <b>Title:</b>
-  <%= @posted_talk.title %>
-</p>
-
-<p>
-  <b>Abstract:</b>
-  <%= @posted_talk.abstract %>
-</p>
-
-<p>
-  <b>Start time:</b>
-  <%= @posted_talk.start_time %>
-</p>
-
-<p>
-  <b>End time:</b>
-  <%= @posted_talk.end_time %>
-</p>
-
-<p>
-  <b>Name of speaker:</b>
-  <%= @posted_talk.name_of_speaker %>
-</p>
-
-<p>
-  <b>Speaker:</b>
-  <%= @posted_talk.speaker_id %>
-</p>
-
-<p>
-  <b>Series:</b>
-  <%= @posted_talk.series_id %>
-</p>
-
-<p>
-  <b>Venue:</b>
-  <%= @posted_talk.venue_id %>
-</p>
-
-<p>
-  <b>Abstract filtered:</b>
-  <%= @posted_talk.abstract_filtered %>
-</p>
-
-<p>
-  <b>Language:</b>
-  <%= @posted_talk.language %>
-</p>
-
-
-<%= link_to 'Edit', edit_posted_talk_path(@posted_talk) %> |
-<%= link_to 'Back', posted_talks_path %>
+<div class='vevent preview'>
+	<%= logo(@talk, :medium) %>
+	<h1 class='summary'><%= @talk.title %></h1>
+	<%= link_to_if @talk.speaker, @talk.name_of_speaker, { :controller => "user", :action => "show", :id => @talk.speaker  } %>		
+	<ul class='details'>
+		<li><%= image_tag 'clock.jpg' %><%= format_time_of_talk @talk %></li>
+		<li><%= image_tag 'house.jpg' %><%= link_list @talk.venue %>.</li>
+	</ul>
+		
+		<%= @talk.abstract_filtered.html_safe %>
+		
+		<p>This talk is part of the <%= link_list @talk.series %> series.</p>		
+		
+</div>
