Fixed new_user_url -> new_user_path

--- a/app/views/login/index.html.erb
+++ b/app/views/login/index.html.erb
@@ -14,4 +14,4 @@
 
 <p><%= link_to 'E-mail me my password', :action => 'lost_password'%></p>
 
-<p><%= link_to 'No account?', new_user_url %></p>
+<p><%= link_to 'No account?', new_user_path %></p>
