--- a/app/views/talk/_help_talk_speaker_email.html.erb
+++ b/app/views/talk/_help_talk_speaker_email.html.erb
@@ -9,7 +9,7 @@
 </div>
 </ul>
 
+<% unless @prefix == "posted_talk_" %>
 <p>If you check the box to the left then, after you click save, the speaker will be sent an e-mail message explaining how they can edit the talk. No e-mail will be sent unless the organiser's e-mail field has an e-mail address. You can do this more than once, and in doing so send your speaker several e-mails.</p>
 </div>
-
-<div style='height:14em;'>&nbsp;</div>
+<% end %>
